--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,22 @@ packages = ["src"]
 
 [dependency-groups]
 dev = [
+    "folium>=0.20.0",
+    "geopy>=2.4.1",
+    "highspy>=1.12.0",
+    "ipykernel>=7.1.0",
+    "matplotlib>=3.10.7",
+    "numpy>=2.2.5",
+    "openpyxl>=3.1.5",
     "pandas>=2.2.3",
+    "pip>=25.3",
     "pydantic>=2.11.3",
+    "pyomo>=6.9.5",
     "pyright>=1.1.399",
     "pytest>=8.3.5",
     "pytest-cov>=6.1.1",
     "python-dotenv>=1.1.0",
+    "tqdm>=4.67.1",
 ]
 
 [tool.pytest.ini_options]
